overlays/prod/templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gdg-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gdg-demo-ip-prod
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: prod-cert
spec:
  rules:
  - host: timothyteoh.dev
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx-service
          servicePort: 8080
